--- a/sass/main.scss
+++ b/sass/main.scss
@@ -35,3 +35,15 @@ p {
       -ms-user-select: none;
           user-select: none;
 }
+span#heat {
+  position: absolute;
+  left: 1rem;
+  top: 1rem;
+  z-index: 999999;
+  pointer-events: none;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: white;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
+  font-family: Helvetica, Arial, sans-serif;
+}
