--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,11 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  font-family: 'Press Start 2P', cursive;
+}
+
 canvas {
   display:block;
   margin: auto;
@@ -16,15 +21,17 @@ canvas {
   cursor: grab;
 }
 p {
-  position: relative;
+  position: absolute;
+  top: 1rem;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
   z-index: 999999;
   pointer-events: none;
   font-size: 1.5rem;
-  font-weight: bold;
   color: white;
+  line-height: 1.5;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
-  margin: 1rem auto;
-  font-family: Helvetica, Arial, sans-serif;
   display: block;
   text-align: center;
   letter-spacing: -1px;
@@ -35,15 +42,27 @@ p {
       -ms-user-select: none;
           user-select: none;
 }
-span#heat {
+
+.heat {
   position: absolute;
-  left: 1rem;
-  top: 1rem;
   z-index: 999999;
-  pointer-events: none;
-  font-size: 1.5rem;
-  font-weight: bold;
-  color: white;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
-  font-family: Helvetica, Arial, sans-serif;
+  width: 300px;
+  height: 30px;
+  top: 1rem;
+  left: 1rem;
+  border: 2px solid white;
+  #heatStatus {
+    position: absolute;
+    width: 8%;
+    height: 100%;
+    background-color: red;
+  }
+  span {
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 1rem;
+    transform: translateY(-50%);
+    font-size: 1rem;
+  }
 }
